# weather

./: alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/constants/: error_constants.py
app/api/dao/: database.py
app/api/dao/models/: locations_orm.py  users_orm.py
app/api/dao/repositories/: location_repository.py  user_repository.py
app/api/dao/repositories/base/: base_repository.py
app/api/dto/: common_dto.py
app/api/dto/fast_api/: location_dto.py  user_dto.py
app/api/exceptions/: not_found_exception.py
app/api/settings/: api_settings.py  datasource_settings.py
app/migrations/: env.py
app/migrations/versions/: 1f32728c894b_.py
